small css alignment fix

--- a/pythonjudge/static/css/code.css
+++ b/pythonjudge/static/css/code.css
@@ -32,11 +32,12 @@
 }
 
 #code-runner-input {
-    height: 58px;
+    height: 60px;
     background-color: white;
     width: 100%;
     resize: vertical;
     box-sizing: border-box;
+    margin-top:1px;
 }
 
 #code-runner-button {
